# MultiMapWormholes

./: README.md  commands.txt  frames_2025-03-20_17.51.35.gv  wormholes_locations.db
install/: local_setup.sh  setup.sh
install/switch_places/lib/switch_places/: move_to_map_client  move_to_map_server
install/switch_places/share/switch_places/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/switch_places/share/switch_places/cmake/: switch_placesConfig-version.cmake  switch_placesConfig.cmake
install/switch_places/share/switch_places/environment/: ament_prefix_path.dsv  path.dsv
install/switch_places_msgs/share/switch_places_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/switch_places_msgs/share/switch_places_msgs/action/: MoveToMap.idl
install/switch_places_msgs/share/switch_places_msgs/cmake/: ament_cmake_export_targets-extras.cmake  export_switch_places_msgs__rosidl_generator_cppExport.cmake  export_switch_places_msgs__rosidl_generator_pyExport-noconfig.cmake  (+5 more)
log/: latest_build
src/maps/: entrance.pgm  entrance.yaml  room1.pgm  room1.yaml  room2.pgm  room2.yaml  room3.pgm  room3.yaml  room4.pgm  room4.yaml  room5.pgm  room5.yaml  room6.pgm  room6.yaml
src/switch_places/: CMakeLists.txt  package.xml
src/switch_places/src/: create_db  create_db.cpp  move_to_map_client.cpp  move_to_map_server.cpp  wormhole_locations.db
src/switch_places_msgs/: CMakeLists.txt
(+15 files in other folders)
